--- a/CSS/HOMEPAGE/index.html
+++ b/CSS/HOMEPAGE/index.html
@@ -5,15 +5,156 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ineuron</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/65306cc498.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <div class="navcontainer">
         <nav>
-            <a href="index.html">Ineuron</a>
-                <input type="text" placeholder="Search..">
-                <a href="index.html">My Courses</a>
-                <a href="index.html">ujjal</a>
+            <a href="index.html">
+                
+                <img src="./images/ineuron-logo.png" alt="Ineuron Logo"></a>
+                <div class="topnav">
+                    <div class="searchbox">
+                        <i class="fa-sharp fa-light fa-magnifying-glass"></i>
+                        <input type="text" placeholder="What do you want to learn?">
+                    </div>
+                    <a href="index.html">My Courses</a>
+                    <a href="index.html">ujjal</a>
+                    <img src="#" alt="icon of account holder">
+                </div>
         </nav>
+        <div class="navcontainer">
+            <div class="navigationLink">
+                <a href="#">Courses</a>
+                <a href="#">One Neuron</a>
+                <a href="#">Neuro Lab</a>
+                <a href="#">Job Portal</a>
+                <a href="#">Internship Portal</a>
+                <a href="#">Become an affiliate</a>
+                <a href="#">Hall of fame</a>
+                <a href="#">Company</a>
+            </div>
+            <!-- this is the crousal section  -->
+            <section>
+                <div class="crousal">
+                    <div class="imgone">
+                        <img src="./images/web (1).png" alt="one image">
+                        <span class="dot" onclick="slide(1)"></span>
+                    </div>
+                    <div class="imgone">
+                        <img src="./images/web (2).png" alt="two image">
+                    </div>
+                    <div class="imgone">
+                        <img src="./images/web.png" alt="three image">
+                    </div>
+                    <div class="dotbox">
+                        <span class="dot" onclick="slide(1)"></span>
+                        <span class="dot" onclick="slide(2)"></span>
+                        <span class="dot" onclick="slide(3)"></span>
+                    </div>
+                </div>
+            </section>
+            <!-- PURE HARDWORK SECTION -->
+            <div class="achivement">
+                <h2>"Pure Hardwork, No Shortcuts!"</h2>
+                <div class="container">
+                    <div class="card">
+                        <img src="books" alt="books images">
+                        <p>300+ <br/> Different Courses</p>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="card">
+                        <img src="books" alt="books images">
+                        <p>300+ <br/> Different Courses</p>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="card">
+                        <img src="books" alt="books images">
+                        <p>300+ <br/> Different Courses</p>
+                    </div>
+                </div>
+            </div>
+            //ACHIEVER'S SECTION
+            <div class="achievment">
+                <h2>Our Achiever's Work with</h2>
+                <div class="container">
+                    <div class="livecard">
+                        <img src="LiveCard" alt="Live Card">
+                    </div>
+                    <div class="livecard">
+                        <img src="LiveCard" alt="Live Card">
+                    </div>
+                    <div class="livecard">
+                        <img src="LiveCard" alt="Live Card">
+                    </div>
+                    <div class="livecard">
+                        <img src="LiveCard" alt="Live Card">
+                    </div>
+                    <div class="livecard">
+                        <img src="LiveCard" alt="Live Card">
+                    </div>
+                    <div class="livecard">
+                        <img src="LiveCard" alt="Live Card">
+                    </div>
+                    <div class="livecard">
+                        <img src="LiveCard" alt="Live Card">
+                    </div>
+                </div>
+            </div>
+            //HALL OF FAME
+            <div class="hall">
+                <h2>Hall of Fame</h2>
+                <div class="peopleCard">
+                    <div class="livecard">
+                        <img src="livecard" alt="livecard">
+                    </div>
+                </div>
+                <div class="peopleCard">
+                    <div class="livecard">
+                        <img src="livecard" alt="livecard">
+                    </div>
+                </div>
+                <div class="peopleCard">
+                    <div class="livecard">
+                        <img src="livecard" alt="livecard">
+                    </div>
+                </div>
+                <div class="peopleCard">
+                    <div class="livecard">
+                        <img src="livecard" alt="livecard">
+                    </div>
+                </div>
+                <div class="peopleCard">
+                    <div class="livecard">
+                        <img src="livecard" alt="livecard">
+                    </div>
+                </div>
+                <div class="peopleCard">
+                    <div class="livecard">
+                        <img src="livecard" alt="livecard">
+                    </div>
+                </div>
+                <div class="peopleCard">
+                    <div class="livecard">
+                        <img src="livecard" alt="livecard">
+                    </div>
+                </div>
+                <div class="peopleCard">
+                    <div class="livecard">
+                        <img src="livecard" alt="livecard">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        </div>
     </div>
     
 </body>
