--- a/CSS/Q10ANS/index.html
+++ b/CSS/Q10ANS/index.html
@@ -16,11 +16,18 @@
         <header>Header</header>
         <section>
         <aside>Aside</aside>
-        <article>Article
+        <article>
+            <h2>Article</h2>
             <div class="image">
-            <img class="one" src="" alt="Image">
-            <img class="two" src="" alt="Image">
-            <img class="three"src="" alt="Image">
+                <div class="img">
+                    <p>Image</p> 
+                </div>
+                    <div class="img">
+                        <p>Image</p> 
+                    </div>
+                        <div class="img">
+                            <p>Image</p> 
+                        </div>
         </div>
         </article>
     </section>
