--- a/CSS/periodictable/index.html
+++ b/CSS/periodictable/index.html
@@ -12,8 +12,9 @@
         <h1> 
             Periodic Table
         </h1>
-        <p>Group</p>
+        
         <div class="grouping">
+            <p style="font-weight: 700;">Group <br> Period</p>
             <div class="columns">1</div>
             <div class="columns">2</div>
             <div class="columns">3</div>
@@ -33,23 +34,29 @@
             <div class="columns">17</div>
         </div> 
         <div class="period">
-            <div class="columns">1</div>
-            <div class="columns">2</div>
-            <div class="columns">3</div>
-            <div class="columns">4</div>
-            <div class="columns">5</div>
-            <div class="columns">6</div>
-            <div class="columns">7</div>
-            <div class="columns">8</div>
-            <div class="columns">9</div>
-            <div class="columns">10</div>
-            <div class="columns">11</div>
-            <div class="columns">12</div>
-            <div class="columns">13</div>
-            <div class="columns">14</div>
-            <div class="columns">15</div>
-            <div class="columns">16</div>
-            <div class="columns">17</div>
+            <div class="rows1">
+                <h3>1</h3>
+                <div class="helium1">1 H</div>
+                <div class="he2">
+                    <div class="helium2">2 He</div>
+                </div>
+            </div>
+            <div class="rows">2</div>
+            <div class="rows">3</div>
+            <div class="rows">4</div>
+            <div class="rows">5</div>
+            <div class="rows">6</div>
+            <div class="rows">7</div>
+            <div class="rows">8</div>
+            <div class="rows">9</div>
+            <div class="rows">10</div>
+            <div class="rows">11</div>
+            <div class="rows">12</div>
+            <div class="rows">13</div>
+            <div class="rows">14</div>
+            <div class="rows">15</div>
+            <div class="rows">16</div>
+            <div class="rows">17</div>
         </div> 
         <!-- element first line -->
 
