second line updated

--- a/CSS/periodictable/index.html
+++ b/CSS/periodictable/index.html
@@ -36,12 +36,30 @@
         <div class="period">
             <div class="rows1">
                 <h3>1</h3>
-                <div class="helium1">1 H</div>
-                <div class="he2">
-                    <div class="helium2">2 He</div>
-                </div>
+                <div class="pline1">
+                    <div class="box">1 H</div>
+                    <div class="box">
+                        <div class="helium2">2 He</div>
+                    </div>
+                </div></div>
+            <div class="rows">
+                <h3>2</h3>
+                <div class="pline1">
+                    <div class="pline2left">
+                        <div class="box">3Li</div>
+                        <div class="box">4Be
+                        </div>
+                    </div>
+                    <div class="pline2right">
+                        <div class="boxy">5B</div>
+                        <div class="boxy">6C</div>
+                        <div class="boxy">7N</div>
+                        <div class="boxy">8O</div>
+                        <div class="boxy">9F</div>
+                        <div class="boxy">10Ne</div>
+                    </div>
+                </div></div>
             </div>
-            <div class="rows">2</div>
             <div class="rows">3</div>
             <div class="rows">4</div>
             <div class="rows">5</div>
