--- a/CSS/periodictable/index.html
+++ b/CSS/periodictable/index.html
@@ -42,6 +42,7 @@
                         <div class="helium2">2 He</div>
                     </div>
                 </div></div>
+                <!-- this is row one -->
             <div class="rows">
                 <h3>2</h3>
                 <div class="pline1">
@@ -58,9 +59,26 @@
                         <div class="boxy">9F</div>
                         <div class="boxy">10Ne</div>
                     </div>
-                </div></div>
+                </div>
             </div>
-            <div class="rows">3</div>
+            <div class="rows">
+                <h3>2</h3>
+                <div class="pline1">
+                    <div class="pline2left">
+                        <div class="box">3Li</div>
+                        <div class="box">4Be
+                        </div>
+                    </div>
+                    <div class="pline2right">
+                        <div class="boxy">5B</div>
+                        <div class="boxy">6C</div>
+                        <div class="boxy">7N</div>
+                        <div class="boxy">8O</div>
+                        <div class="boxy">9F</div>
+                        <div class="boxy">10Ne</div>
+                    </div>
+                </div>    
+            </div>
             <div class="rows">4</div>
             <div class="rows">5</div>
             <div class="rows">6</div>
