--- a/CSS/INEURONHOMEPAGE/index.html
+++ b/CSS/INEURONHOMEPAGE/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.png">
     <title>Ineuron</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,6 +16,7 @@
 </head>
 <body>
     <div class="navcontainer">
+        <!-- here starts top nav  -->
         <nav>
             <a href="index.html">
                 
@@ -28,6 +31,7 @@
                     <img src="#" alt="icon of account holder">
                 </div>
         </nav>
+        <!-- here start the navbar links  -->
         <div class="navcontainer">
             <div class="navigationLink">
                 <a href="#">Courses</a>
@@ -44,24 +48,18 @@
                 <div class="crousal">
                     <div class="imgone">
                         <img src="./images/web (1).png" alt="one image">
-                        <span class="dot" onclick="slide(1)"></span>
-                    </div>
-                    <div class="imgone">
-                        <img src="./images/web (2).png" alt="two image">
-                    </div>
-                    <div class="imgone">
-                        <img src="./images/web.png" alt="three image">
-                    </div>
-                    <div class="dotbox">
-                        <span class="dot" onclick="slide(1)"></span>
-                        <span class="dot" onclick="slide(2)"></span>
-                        <span class="dot" onclick="slide(3)"></span>
                     </div>
                 </div>
             </section>
             <!-- PURE HARDWORK SECTION -->
             <div class="achivement">
-                <h2>"Pure Hardwork, No Shortcuts!"</h2>
+                <div class="hardworkHeading">
+                    <h2>"Pure Hardwork, No Shortcuts!"
+                    </h2>
+                        <div class="yellowline"> 
+                            <p></p>
+                        </div>
+                </div>
                 <div class="container">
                     <div class="card">
                         <img src="books" alt="books images">
@@ -154,8 +152,8 @@
             </div>
         </div>
 
-        </div>
     </div>
+
     
 </body>
 </html>
