--- a/CSS/periodictable/index.html
+++ b/CSS/periodictable/index.html
@@ -33,7 +33,9 @@
             <div class="columns">16</div>
             <div class="columns">17</div>
         </div> 
+        <!-- this is the main div of period element  -->
         <div class="period">
+            <!-- this is the first element of the period -->
             <div class="rows1">
                 <h3>1</h3>
                 <div class="pline1">
@@ -41,8 +43,9 @@
                     <div class="box">
                         <div class="helium2">2 He</div>
                     </div>
-                </div></div>
-                <!-- this is row one -->
+                </div>
+            </div>
+                <!-- this is row two -->
             <div class="rows">
                 <h3>2</h3>
                 <div class="pline1">
@@ -61,21 +64,22 @@
                     </div>
                 </div>
             </div>
-            <div class="rows">
-                <h3>2</h3>
-                <div class="pline1">
-                    <div class="pline2left">
-                        <div class="box">3Li</div>
-                        <div class="box">4Be
+            <!-- this is row three -->
+            <div class="rows3">
+                <h3>3</h3>
+                <div class="pline3">
+                    <div class="pline3left">
+                        <div class="box">11 <br> Na</div>
+                        <div class="box">12 <br> Mg
                         </div>
                     </div>
-                    <div class="pline2right">
-                        <div class="boxy">5B</div>
-                        <div class="boxy">6C</div>
-                        <div class="boxy">7N</div>
-                        <div class="boxy">8O</div>
-                        <div class="boxy">9F</div>
-                        <div class="boxy">10Ne</div>
+                    <div class="pline3right">
+                        <div class="boxy">13Al</div>
+                        <div class="boxy">14Si</div>
+                        <div class="boxy">15P</div>
+                        <div class="boxy">16S</div>
+                        <div class="boxy">17Cl</div>
+                        <div class="boxy">18Ar</div>
                     </div>
                 </div>    
             </div>
