pure hardwork section

--- a/CSS/INEURONHOMEPAGE/index.html
+++ b/CSS/INEURONHOMEPAGE/index.html
@@ -60,26 +60,28 @@
                             <p></p>
                         </div>
                 </div>
-                <div class="container">
+                <div class="achievmentCard">
                     <div class="card">
-                        <img src="books" alt="books images">
-                        <p>300+ <br/> Different Courses</p>
+                        <div class="card-img">
+                            <img src="./images/books-icon.svg" alt="books images">
+                        </div>
+                        <h3>300+ <br> <span>Different Courses</span> </h3>
                     </div>
-                </div>
-                <div class="container">
                     <div class="card">
-                        <img src="books" alt="books images">
-                        <p>300+ <br/> Different Courses</p>
+                        <div class="card-img">
+                            <img src="./images/books-icon.svg" alt="books images">
+                        </div>
+                        <h3>4,00,000+ <br> <span>Student Enrolled</span> </h3>
                     </div>
-                </div>
-                <div class="container">
                     <div class="card">
-                        <img src="books" alt="books images">
-                        <p>300+ <br/> Different Courses</p>
+                        <div class="card-img">
+                            <img src="./images/books-icon.svg" alt="books images">
+                        </div>
+                        <h3>300+ <br> <span>Succesful Transaction</span> </h3>
                     </div>
                 </div>
             </div>
-            //ACHIEVER'S SECTION
+            <!-- //ACHIEVER'S SECTION -->
             <div class="achievment">
                 <h2>Our Achiever's Work with</h2>
                 <div class="container">
