--- a/CSS/INEURONHOMEPAGE/index.html
+++ b/CSS/INEURONHOMEPAGE/index.html
@@ -84,27 +84,51 @@
             <!-- //ACHIEVER'S SECTION -->
             <div class="achievment">
                 <h2>Our Achiever's Work with</h2>
-                <div class="container">
+                <div class="liveCardContainer">
                     <div class="livecard">
-                        <img src="LiveCard" alt="Live Card">
+                        <img src="./images/achieverimage/fork.png" alt="Live Card">
                     </div>
                     <div class="livecard">
-                        <img src="LiveCard" alt="Live Card">
+                        <img src="./images/achieverimage/freshworks.png" alt="Live Card">
                     </div>
                     <div class="livecard">
-                        <img src="LiveCard" alt="Live Card">
+                        <img src="./images/achieverimage/geekyants.png" alt="Live Card">
                     </div>
                     <div class="livecard">
-                        <img src="LiveCard" alt="Live Card">
+                        <img src="./images/achieverimage/hitachi.png" alt="Live Card">
                     </div>
                     <div class="livecard">
-                        <img src="LiveCard" alt="Live Card">
+                        <img src="./images/achieverimage/ibm.png" alt="Live Card">
                     </div>
                     <div class="livecard">
-                        <img src="LiveCard" alt="Live Card">
+                        <img src="./images/achieverimage/impetus.png" alt="Live Card">
                     </div>
                     <div class="livecard">
-                        <img src="LiveCard" alt="Live Card">
+                        <img src="./images/achieverimage/informatica.png" alt="Live Card">
+                    </div>
+                    <div class="livecard">
+                        <img src="./images/achieverimage/kaplan.png" alt="Live Card">
+                    </div>
+                    <div class="livecard">
+                        <img src="./images/achieverimage/maveric.png" alt="Live Card">
+                    </div>
+                    <div class="livecard">
+                        <img src="./images/achieverimage/Metadome-ai.png" alt="Live Card">
+                    </div>
+                    <div class="livecard">
+                        <img src="./images/achieverimage/ms100.png" alt="Live Card">
+                    </div>
+                    <div class="livecard">
+                        <img src="./images/achieverimage/musigma.png" alt="Live Card">
+                    </div>
+                    <div class="livecard">
+                        <img src="./images/achieverimage/optimum.png" alt="Live Card">
+                    </div>
+                    <div class="livecard">
+                        <img src="./images/achieverimage/redbus.png" alt="Live Card">
+                    </div>
+                    <div class="livecard">
+                        <img src="./images/achieverimage/robosoft.png" alt="Live Card">
                     </div>
                 </div>
             </div>
