--- a/CSS/INEURONHOMEPAGE/index.html
+++ b/CSS/INEURONHOMEPAGE/index.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.png">
     <title>Ineuron</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -133,11 +131,13 @@
                 </div>
             </div>
             //HALL OF FAME
-            <div class="hall">
+            <div class="hallofFame">
                 <h2>Hall of Fame</h2>
-                <div class="peopleCard">
-                    <div class="livecard">
-                        <img src="livecard" alt="livecard">
+                <div class="hallCard"> 
+                    <div class="peopleCard">
+                        <div class="livecard">
+                            <img src="livecard" alt="livecard">
+                        </div>
                     </div>
                 </div>
                 <div class="peopleCard">
