hall of fame card

--- a/CSS/INEURONHOMEPAGE/index.html
+++ b/CSS/INEURONHOMEPAGE/index.html
@@ -130,49 +130,42 @@
                     </div>
                 </div>
             </div>
-            //HALL OF FAME
+            <!-- //HALL OF FAME -->
+            <h2>Hall of Fame</h2>
             <div class="hallofFame">
-                <h2>Hall of Fame</h2>
                 <div class="hallCard"> 
                     <div class="peopleCard">
                         <div class="livecard">
-                            <img src="livecard" alt="livecard">
+                            <img src="https://hall-of-fame-cdn.ineuron.ai/profilePictures/6451d16b1a5feb001a75c38a.jpeg" alt="livecard">
                         </div>
+                        <div class="liveCardname">
+                            <h4>Name</h4>
+                            <p>facebook, frontend developer</p>
+                            <p>being from a non tech background i always thought it will be hard to get my food in tech, I started my web developer jurney </p>
+                        </div>
+                        <img src="#" alt="linkedin">
                     </div>
-                </div>
-                <div class="peopleCard">
-                    <div class="livecard">
-                        <img src="livecard" alt="livecard">
+                    <div class="peopleCard">
+                        <div class="livecard">
+                            <img src="https://hall-of-fame-cdn.ineuron.ai/profilePictures/6451d16b1a5feb001a75c38a.jpeg" alt="livecard">
+                        </div>
+                        <div class="liveCardname">
+                            <h4>Name</h4>
+                            <p>facebook, frontend developer</p>
+                            <p>being from a non tech background i always thought it will be hard to get my food in tech, I started my web developer jurney </p>
+                        </div>
+                        <img src="#" alt="linkedin">
                     </div>
-                </div>
-                <div class="peopleCard">
-                    <div class="livecard">
-                        <img src="livecard" alt="livecard">
-                    </div>
-                </div>
-                <div class="peopleCard">
-                    <div class="livecard">
-                        <img src="livecard" alt="livecard">
-                    </div>
-                </div>
-                <div class="peopleCard">
-                    <div class="livecard">
-                        <img src="livecard" alt="livecard">
-                    </div>
-                </div>
-                <div class="peopleCard">
-                    <div class="livecard">
-                        <img src="livecard" alt="livecard">
-                    </div>
-                </div>
-                <div class="peopleCard">
-                    <div class="livecard">
-                        <img src="livecard" alt="livecard">
-                    </div>
-                </div>
-                <div class="peopleCard">
-                    <div class="livecard">
-                        <img src="livecard" alt="livecard">
+                    <div class="peopleCard">
+                        <div class="livecard">
+                            <img src="https://hall-of-fame-cdn.ineuron.ai/profilePictures/6451d16b1a5feb001a75c38a.jpeg" alt="livecard">
+                        </div>
+                        <div class="liveCardname">
+                            <h4>Name</h4>
+                            <p>facebook, frontend developer</p>
+                            <p>being from a non tech background i always thought it will be hard to get my food in tech, I started my web developer jurney </p>
+                        </div>
+                        <img src="#" alt="linkedin">
                     </div>
                 </div>
             </div>
