live card updated

--- a/CSS/INEURONHOMEPAGE/index.html
+++ b/CSS/INEURONHOMEPAGE/index.html
@@ -147,7 +147,7 @@
                     </div>
                     <div class="peopleCard">
                         <div class="livecard">
-                            <img src="https://hall-of-fame-cdn.ineuron.ai/profilePictures/6451d16b1a5feb001a75c38a.jpeg" alt="livecard">
+                            <img src="https://hall-of-fame-cdn.ineuron.ai/profilePictures/646308351a5feb001a786e75.jpeg" alt="livecard">
                         </div>
                         <div class="liveCardname">
                             <h4>Name</h4>
@@ -166,6 +166,54 @@
                             <p>being from a non tech background i always thought it will be hard to get my food in tech, I started my web developer jurney </p>
                         </div>
                         <img src="#" alt="linkedin">
+                    </div>
+                </div>
+            </div>
+            <!-- live Program card  -->
+            <div class="liveProgram">
+                <div class="programCard">
+                    <h2>Live Program</h2>
+                    <p>Get your program with live "instructor led" learning.</p>
+                    <div class="mainCard">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="./images/liveprogramcard/63499786078885f5cbfe42a7.jpg" alt="">
+                            </div>
+                            <h4>Full Stack Data Science Master</h4>
+                            <p>Learn Data Science skills with practical assignments and quizzes.</p>
+                            <div class="coursePrice">
+                                <p>23000.00</p>
+                                <div class="livebox">
+                                    <p>Live</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="./images/liveprogramcard/63499786078885f5cbfe42a7.jpg" alt="">
+                            </div>
+                            <h4>Full Stack Data Science Master</h4>
+                            <p>Learn Data Science skills with practical assignments and quizzes.</p>
+                            <div class="coursePrice">
+                                <p>23000.00</p>
+                                <div class="livebox">
+                                    <p>Live</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                        <div class="card-image">
+                            <img src="./images/liveprogramcard/63499786078885f5cbfe42a7.jpg" alt="">
+                        </div>
+                        <h4>Full Stack Data Science Master</h4>
+                        <p>Learn Data Science skills with practical assignments and quizzes.</p>
+                        <div class="coursePrice">
+                            <p>23000.00</p>
+                            <div class="livebox">
+                                <p>Live</p>
+                            </div>
+                        </div>
+                        </div>
                     </div>
                 </div>
             </div>
